src/test/ui/parser/macro/macro-doc-comments-1.stderr
error: no rules expected the token `!`
  --> $DIR/macro-doc-comments-1.rs:16:5
   |
LL | macro_rules! outer {
   | ------------------ when calling this macro
...
LL |     //! Inner
   |     ^^^^^^^^^ no rules expected this token in macro call

error: aborting due to previous error

